Fix bookmark alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -144,10 +144,12 @@ h1 {
 
 .bookmark {
     text-align: center;
-    margin: 2rem auto;
+    margin: 8rem auto;
 }
 
 .bookmark img {
+    display: block;
+    margin: 0 auto;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.04);
 }
 
